<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="1dp">
	<TextView
		android:text="@string/field_1"
		android:id="@+id/textView1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.5"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_2"
		android:id="@+id/textView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_3"
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_4"
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.25"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_5"
		android:id="@+id/textView5"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.25"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_6"
		android:id="@+id/textView6"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="4"
		android:textSize="6sp"></TextView>
	<TextView
		android:text="@string/field_7"
		android:id="@+id/textView7"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.5"
		android:textSize="6sp"></TextView>
</LinearLayout>